// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portfolio getBalanceHistory should return history of 30 items with month range 1`] = `
Array [
  Object {
    "date": 2020-04-04T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-05T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-06T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-07T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-09T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-10T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-11T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-13T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-14T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-16T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-17T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-18T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-20T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-21T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-23T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-24T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-28T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-29T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-30T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-05-01T03:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-05-02T03:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T12:04:06.099Z,
    "value": 1123402240807953300,
  },
]
`;

exports[`Portfolio getBalanceHistory should return history of 52 items with all time range 1`] = `
Array [
  Object {
    "date": 2019-05-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-05-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-05-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-02T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-09T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-16T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-23T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-30T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-07-07T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-07-14T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-07-21T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-07-28T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-08-04T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-08-11T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-08-18T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-08-25T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-01T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-29T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-10-06T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-10-13T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-10-20T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-10-27T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-11-03T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-11-10T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-11-17T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-11-24T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-01T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-29T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-01-05T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-01-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-01-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-01-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-02-02T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-02-09T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-02-16T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-02-23T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-01T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-29T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-05T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-05-02T12:04:06.099Z,
    "value": 1123402240807953300,
  },
]
`;

exports[`Portfolio getBalanceHistory should return history of 52 items with year range 1`] = `
Array [
  Object {
    "date": 2019-05-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-05-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-05-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-02T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-09T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-16T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-23T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-30T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-07-07T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-07-14T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-07-21T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-07-28T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-08-04T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-08-11T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-08-18T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-08-25T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-01T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-29T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-10-06T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-10-13T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-10-20T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-10-27T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-11-03T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-11-10T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-11-17T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-11-24T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-01T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-29T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-01-05T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-01-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-01-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-01-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-02-02T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-02-09T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-02-16T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-02-23T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-01T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-29T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-05T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-05-02T12:04:06.099Z,
    "value": 1123402240807953300,
  },
]
`;

exports[`Portfolio getBalanceHistory should return history of 168 items with day range 1`] = `
Array [
  Object {
    "date": 2020-05-01T13:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T14:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T15:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T16:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T17:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T18:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T19:59:59.999Z,
    "value": 1150053477811091800,
  },
  Object {
    "date": 2020-05-01T20:59:59.999Z,
    "value": 1150053477811091800,
  },
  Object {
    "date": 2020-05-01T21:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-01T22:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-01T23:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T00:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T01:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T02:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T03:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T04:59:59.999Z,
    "value": 703838128802623100,
  },
  Object {
    "date": 2020-05-02T05:59:59.999Z,
    "value": 703838128802623100,
  },
  Object {
    "date": 2020-05-02T06:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2020-05-02T07:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2020-05-02T08:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2020-05-02T09:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2020-05-02T10:59:59.999Z,
    "value": 1123402240807953300,
  },
  Object {
    "date": 2020-05-02T11:59:59.999Z,
    "value": 1123402240807953300,
  },
  Object {
    "date": 2020-05-02T12:04:06.099Z,
    "value": 1123402240807953300,
  },
]
`;

exports[`Portfolio getBalanceHistory should return history of 168(7 * 24) items with week range 1`] = `
Array [
  Object {
    "date": 2020-04-30T09:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T10:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T11:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T12:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T13:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T14:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T15:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T16:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T17:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T18:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-04-30T19:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-04-30T20:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-04-30T21:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-04-30T22:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-04-30T23:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-05-01T00:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-05-01T01:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-05-01T02:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-05-01T03:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-05-01T04:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-05-01T05:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-05-01T06:59:59.999Z,
    "value": 1381428295898865700,
  },
  Object {
    "date": 2020-05-01T07:59:59.999Z,
    "value": 1381428295898865700,
  },
  Object {
    "date": 2020-05-01T08:59:59.999Z,
    "value": 1381428295898865700,
  },
  Object {
    "date": 2020-05-01T09:59:59.999Z,
    "value": 1381428295898865700,
  },
  Object {
    "date": 2020-05-01T10:59:59.999Z,
    "value": 1381428295898865700,
  },
  Object {
    "date": 2020-05-01T11:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T12:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T13:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T14:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T15:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T16:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T17:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T18:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T19:59:59.999Z,
    "value": 1150053477811091800,
  },
  Object {
    "date": 2020-05-01T20:59:59.999Z,
    "value": 1150053477811091800,
  },
  Object {
    "date": 2020-05-01T21:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-01T22:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-01T23:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T00:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T01:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T02:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T03:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T04:59:59.999Z,
    "value": 703838128802623100,
  },
  Object {
    "date": 2020-05-02T05:59:59.999Z,
    "value": 703838128802623100,
  },
  Object {
    "date": 2020-05-02T06:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2020-05-02T07:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2020-05-02T08:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2020-05-02T09:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2020-05-02T10:59:59.999Z,
    "value": 1123402240807953300,
  },
  Object {
    "date": 2020-05-02T11:59:59.999Z,
    "value": 1123402240807953300,
  },
  Object {
    "date": 2020-05-02T12:04:06.099Z,
    "value": 1123402240807953300,
  },
]
`;

exports[`Portfolio getBalanceHistoryWithCountervalue should return same value as history 1`] = `
Object {
  "countervalueAvailable": true,
  "countervalueChange": Object {
    "percentage": -0.6474790167773535,
    "value": -630045.2756509001,
  },
  "countervalueReceiveSum": 0,
  "countervalueSendSum": 0,
  "cryptoChange": Object {
    "percentage": null,
    "value": -11160432,
  },
  "history": Array [
    Object {
      "countervalue": 973074.4307155696,
      "date": 2020-05-01T13:59:59.999Z,
      "value": 17236747,
    },
    Object {
      "countervalue": 973074.4307155696,
      "date": 2020-05-01T14:59:59.999Z,
      "value": 17236747,
    },
    Object {
      "countervalue": 973599.8432964162,
      "date": 2020-05-01T15:59:59.999Z,
      "value": 17246054,
    },
    Object {
      "countervalue": 973599.8432964162,
      "date": 2020-05-01T16:59:59.999Z,
      "value": 17246054,
    },
    Object {
      "countervalue": 567076.6637926904,
      "date": 2020-05-01T17:59:59.999Z,
      "value": 10045025,
    },
    Object {
      "countervalue": 567076.6637926904,
      "date": 2020-05-01T18:59:59.999Z,
      "value": 10045025,
    },
    Object {
      "countervalue": 567076.6637926904,
      "date": 2020-05-01T19:59:59.999Z,
      "value": 10045025,
    },
    Object {
      "countervalue": 567076.6637926904,
      "date": 2020-05-01T20:59:59.999Z,
      "value": 10045025,
    },
    Object {
      "countervalue": 567076.6637926904,
      "date": 2020-05-01T21:59:59.999Z,
      "value": 10045025,
    },
    Object {
      "countervalue": 343029.1550646695,
      "date": 2020-05-01T22:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 343029.1550646695,
      "date": 2020-05-01T23:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 343029.1550646695,
      "date": 2020-05-02T00:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 343029.1550646695,
      "date": 2020-05-02T01:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 343029.1550646695,
      "date": 2020-05-02T02:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 343029.1550646695,
      "date": 2020-05-02T03:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 343029.1550646695,
      "date": 2020-05-02T04:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 343029.1550646695,
      "date": 2020-05-02T05:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 343029.1550646695,
      "date": 2020-05-02T06:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 343029.1550646695,
      "date": 2020-05-02T07:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 343029.1550646695,
      "date": 2020-05-02T08:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 343029.1550646695,
      "date": 2020-05-02T09:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 343029.1550646695,
      "date": 2020-05-02T10:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 343029.1550646695,
      "date": 2020-05-02T11:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 343029.1550646695,
      "date": 2020-05-02T12:04:06.099Z,
      "value": 6076315,
    },
  ],
}
`;

exports[`Portfolio getPortfolio should work with one account and is identically to that account history 1`] = `
Array [
  Object {
    "date": 2020-04-25T13:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T14:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T15:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T16:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T17:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T18:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T19:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T20:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T21:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T22:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T23:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T00:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T01:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T02:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T04:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T05:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T06:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T07:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T08:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T09:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T10:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T11:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T12:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T13:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T14:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T15:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T16:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T17:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T18:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T19:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T20:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T21:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T22:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T23:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T00:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T01:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T02:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T04:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T05:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T06:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T07:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T08:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T09:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T10:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T11:59:59.999Z,
    "value": 150176.31766319252,
  },
  Object {
    "date": 2020-04-27T12:59:59.999Z,
    "value": 150176.31766319252,
  },
  Object {
    "date": 2020-04-27T13:59:59.999Z,
    "value": 150176.31766319252,
  },
  Object {
    "date": 2020-04-27T14:59:59.999Z,
    "value": 150176.31766319252,
  },
  Object {
    "date": 2020-04-27T15:59:59.999Z,
    "value": 297980.4034514786,
  },
  Object {
    "date": 2020-04-27T16:59:59.999Z,
    "value": 297980.4034514786,
  },
  Object {
    "date": 2020-04-27T17:59:59.999Z,
    "value": 307407.4579320213,
  },
  Object {
    "date": 2020-04-27T18:59:59.999Z,
    "value": 307407.4579320213,
  },
  Object {
    "date": 2020-04-27T19:59:59.999Z,
    "value": 307407.4579320213,
  },
  Object {
    "date": 2020-04-27T20:59:59.999Z,
    "value": 307407.4579320213,
  },
  Object {
    "date": 2020-04-27T21:59:59.999Z,
    "value": 307407.4579320213,
  },
  Object {
    "date": 2020-04-27T22:59:59.999Z,
    "value": 307407.4579320213,
  },
  Object {
    "date": 2020-04-27T23:59:59.999Z,
    "value": 307407.4579320213,
  },
  Object {
    "date": 2020-04-28T00:59:59.999Z,
    "value": 310034.6337432234,
  },
  Object {
    "date": 2020-04-28T01:59:59.999Z,
    "value": 310034.6337432234,
  },
  Object {
    "date": 2020-04-28T02:59:59.999Z,
    "value": 310034.6337432234,
  },
  Object {
    "date": 2020-04-28T03:59:59.999Z,
    "value": 310034.6337432234,
  },
  Object {
    "date": 2020-04-28T04:59:59.999Z,
    "value": 310034.6337432234,
  },
  Object {
    "date": 2020-04-28T05:59:59.999Z,
    "value": 310034.6337432234,
  },
  Object {
    "date": 2020-04-28T06:59:59.999Z,
    "value": 310034.6337432234,
  },
  Object {
    "date": 2020-04-28T07:59:59.999Z,
    "value": 310034.6337432234,
  },
  Object {
    "date": 2020-04-28T08:59:59.999Z,
    "value": 310034.6337432234,
  },
  Object {
    "date": 2020-04-28T09:59:59.999Z,
    "value": 310034.6337432234,
  },
  Object {
    "date": 2020-04-28T10:59:59.999Z,
    "value": 310034.6337432234,
  },
  Object {
    "date": 2020-04-28T11:59:59.999Z,
    "value": 288105.10830348963,
  },
  Object {
    "date": 2020-04-28T12:59:59.999Z,
    "value": 288105.10830348963,
  },
  Object {
    "date": 2020-04-28T13:59:59.999Z,
    "value": 288105.10830348963,
  },
  Object {
    "date": 2020-04-28T14:59:59.999Z,
    "value": 288105.10830348963,
  },
  Object {
    "date": 2020-04-28T15:59:59.999Z,
    "value": 288105.10830348963,
  },
  Object {
    "date": 2020-04-28T16:59:59.999Z,
    "value": 288105.10830348963,
  },
  Object {
    "date": 2020-04-28T17:59:59.999Z,
    "value": 288105.10830348963,
  },
  Object {
    "date": 2020-04-28T18:59:59.999Z,
    "value": 288105.10830348963,
  },
  Object {
    "date": 2020-04-28T19:59:59.999Z,
    "value": 215114.87386529846,
  },
  Object {
    "date": 2020-04-28T20:59:59.999Z,
    "value": 282371.5795040976,
  },
  Object {
    "date": 2020-04-28T21:59:59.999Z,
    "value": 258942.9882352244,
  },
  Object {
    "date": 2020-04-28T22:59:59.999Z,
    "value": 281915.6047092659,
  },
  Object {
    "date": 2020-04-28T23:59:59.999Z,
    "value": 281915.6047092659,
  },
  Object {
    "date": 2020-04-29T00:59:59.999Z,
    "value": 281915.6047092659,
  },
  Object {
    "date": 2020-04-29T01:59:59.999Z,
    "value": 281915.6047092659,
  },
  Object {
    "date": 2020-04-29T02:59:59.999Z,
    "value": 437632.26734766905,
  },
  Object {
    "date": 2020-04-29T03:59:59.999Z,
    "value": 437632.26734766905,
  },
  Object {
    "date": 2020-04-29T04:59:59.999Z,
    "value": 437632.26734766905,
  },
  Object {
    "date": 2020-04-29T05:59:59.999Z,
    "value": 437632.26734766905,
  },
  Object {
    "date": 2020-04-29T06:59:59.999Z,
    "value": 437632.26734766905,
  },
  Object {
    "date": 2020-04-29T07:59:59.999Z,
    "value": 437632.26734766905,
  },
  Object {
    "date": 2020-04-29T08:59:59.999Z,
    "value": 437632.26734766905,
  },
  Object {
    "date": 2020-04-29T09:59:59.999Z,
    "value": 437632.26734766905,
  },
  Object {
    "date": 2020-04-29T10:59:59.999Z,
    "value": 437632.26734766905,
  },
  Object {
    "date": 2020-04-29T11:59:59.999Z,
    "value": 462722.17176032154,
  },
  Object {
    "date": 2020-04-29T12:59:59.999Z,
    "value": 462722.17176032154,
  },
  Object {
    "date": 2020-04-29T13:59:59.999Z,
    "value": 462722.17176032154,
  },
  Object {
    "date": 2020-04-29T14:59:59.999Z,
    "value": 462722.17176032154,
  },
  Object {
    "date": 2020-04-29T15:59:59.999Z,
    "value": 462722.17176032154,
  },
  Object {
    "date": 2020-04-29T16:59:59.999Z,
    "value": 462722.17176032154,
  },
  Object {
    "date": 2020-04-29T17:59:59.999Z,
    "value": 876609.2566976767,
  },
  Object {
    "date": 2020-04-29T18:59:59.999Z,
    "value": 876609.2566976767,
  },
  Object {
    "date": 2020-04-29T19:59:59.999Z,
    "value": 585475.0237728821,
  },
  Object {
    "date": 2020-04-29T20:59:59.999Z,
    "value": 585475.0237728821,
  },
  Object {
    "date": 2020-04-29T21:59:59.999Z,
    "value": 585475.0237728821,
  },
  Object {
    "date": 2020-04-29T22:59:59.999Z,
    "value": 603432.8207595288,
  },
  Object {
    "date": 2020-04-29T23:59:59.999Z,
    "value": 603432.8207595288,
  },
  Object {
    "date": 2020-04-30T00:59:59.999Z,
    "value": 603432.8207595288,
  },
  Object {
    "date": 2020-04-30T01:59:59.999Z,
    "value": 603432.8207595288,
  },
  Object {
    "date": 2020-04-30T02:59:59.999Z,
    "value": 603432.8207595288,
  },
  Object {
    "date": 2020-04-30T03:59:59.999Z,
    "value": 603432.8207595288,
  },
  Object {
    "date": 2020-04-30T04:59:59.999Z,
    "value": 603432.8207595288,
  },
  Object {
    "date": 2020-04-30T05:59:59.999Z,
    "value": 603432.8207595288,
  },
  Object {
    "date": 2020-04-30T06:59:59.999Z,
    "value": 630446.772833126,
  },
  Object {
    "date": 2020-04-30T07:59:59.999Z,
    "value": 630446.772833126,
  },
  Object {
    "date": 2020-04-30T08:59:59.999Z,
    "value": 630446.772833126,
  },
  Object {
    "date": 2020-04-30T09:59:59.999Z,
    "value": 676430.7893251055,
  },
  Object {
    "date": 2020-04-30T10:59:59.999Z,
    "value": 676430.7893251055,
  },
  Object {
    "date": 2020-04-30T11:59:59.999Z,
    "value": 676430.7893251055,
  },
  Object {
    "date": 2020-04-30T12:59:59.999Z,
    "value": 676430.7893251055,
  },
  Object {
    "date": 2020-04-30T13:59:59.999Z,
    "value": 676430.7893251055,
  },
  Object {
    "date": 2020-04-30T14:59:59.999Z,
    "value": 676430.7893251055,
  },
  Object {
    "date": 2020-04-30T15:59:59.999Z,
    "value": 601964.691439931,
  },
  Object {
    "date": 2020-04-30T16:59:59.999Z,
    "value": 601964.691439931,
  },
  Object {
    "date": 2020-04-30T17:59:59.999Z,
    "value": 601964.691439931,
  },
  Object {
    "date": 2020-04-30T18:59:59.999Z,
    "value": 645491.4571092488,
  },
  Object {
    "date": 2020-04-30T19:59:59.999Z,
    "value": 645491.4571092488,
  },
  Object {
    "date": 2020-04-30T20:59:59.999Z,
    "value": 645491.4571092488,
  },
  Object {
    "date": 2020-04-30T21:59:59.999Z,
    "value": 645491.4571092488,
  },
  Object {
    "date": 2020-04-30T22:59:59.999Z,
    "value": 645491.4571092488,
  },
  Object {
    "date": 2020-04-30T23:59:59.999Z,
    "value": 645491.4571092488,
  },
  Object {
    "date": 2020-05-01T00:59:59.999Z,
    "value": 923373.7426137673,
  },
  Object {
    "date": 2020-05-01T01:59:59.999Z,
    "value": 923373.7426137673,
  },
  Object {
    "date": 2020-05-01T02:59:59.999Z,
    "value": 923373.7426137673,
  },
  Object {
    "date": 2020-05-01T03:59:59.999Z,
    "value": 923373.7426137673,
  },
  Object {
    "date": 2020-05-01T04:59:59.999Z,
    "value": 923373.7426137673,
  },
  Object {
    "date": 2020-05-01T05:59:59.999Z,
    "value": 923373.7426137673,
  },
  Object {
    "date": 2020-05-01T06:59:59.999Z,
    "value": 923373.7426137673,
  },
  Object {
    "date": 2020-05-01T07:59:59.999Z,
    "value": 923373.7426137673,
  },
  Object {
    "date": 2020-05-01T08:59:59.999Z,
    "value": 949043.1420454797,
  },
  Object {
    "date": 2020-05-01T09:59:59.999Z,
    "value": 973074.430715569,
  },
  Object {
    "date": 2020-05-01T10:59:59.999Z,
    "value": 973074.430715569,
  },
  Object {
    "date": 2020-05-01T11:59:59.999Z,
    "value": 973074.430715569,
  },
  Object {
    "date": 2020-05-01T12:59:59.999Z,
    "value": 973074.430715569,
  },
  Object {
    "date": 2020-05-01T13:59:59.999Z,
    "value": 973074.430715569,
  },
  Object {
    "date": 2020-05-01T14:59:59.999Z,
    "value": 973074.430715569,
  },
  Object {
    "date": 2020-05-01T15:59:59.999Z,
    "value": 973599.8432964156,
  },
  Object {
    "date": 2020-05-01T16:59:59.999Z,
    "value": 973599.8432964156,
  },
  Object {
    "date": 2020-05-01T17:59:59.999Z,
    "value": 567076.66379269,
  },
  Object {
    "date": 2020-05-01T18:59:59.999Z,
    "value": 567076.66379269,
  },
  Object {
    "date": 2020-05-01T19:59:59.999Z,
    "value": 567076.66379269,
  },
  Object {
    "date": 2020-05-01T20:59:59.999Z,
    "value": 567076.66379269,
  },
  Object {
    "date": 2020-05-01T21:59:59.999Z,
    "value": 567076.66379269,
  },
  Object {
    "date": 2020-05-01T22:59:59.999Z,
    "value": 343029.15506466926,
  },
  Object {
    "date": 2020-05-01T23:59:59.999Z,
    "value": 343029.15506466926,
  },
  Object {
    "date": 2020-05-02T00:59:59.999Z,
    "value": 343029.15506466926,
  },
  Object {
    "date": 2020-05-02T01:59:59.999Z,
    "value": 343029.15506466926,
  },
  Object {
    "date": 2020-05-02T02:59:59.999Z,
    "value": 343029.15506466926,
  },
  Object {
    "date": 2020-05-02T03:59:59.999Z,
    "value": 343029.15506466926,
  },
  Object {
    "date": 2020-05-02T04:59:59.999Z,
    "value": 343029.15506466926,
  },
  Object {
    "date": 2020-05-02T05:59:59.999Z,
    "value": 343029.15506466926,
  },
  Object {
    "date": 2020-05-02T06:59:59.999Z,
    "value": 343029.15506466926,
  },
  Object {
    "date": 2020-05-02T07:59:59.999Z,
    "value": 343029.15506466926,
  },
  Object {
    "date": 2020-05-02T08:59:59.999Z,
    "value": 343029.15506466926,
  },
  Object {
    "date": 2020-05-02T09:59:59.999Z,
    "value": 343029.15506466926,
  },
  Object {
    "date": 2020-05-02T10:59:59.999Z,
    "value": 343029.15506466926,
  },
  Object {
    "date": 2020-05-02T11:59:59.999Z,
    "value": 343029.15506466926,
  },
  Object {
    "date": 2020-05-02T12:04:06.099Z,
    "value": 343029.15506466926,
  },
]
`;
